--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,11 @@
 {
     "require": {
         "silex/silex": "^1.3",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "tgallice/wit-php": "dev-master",
+        "monolog/monolog": "1.*"
+    },
+    "autoload": {
+        "psr-4": {"Bot\\": "src/"}
     }
 }
